--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "model": "llm_model",
-    "Uri": "endpoint_url"
+    "model": "meta-llama/Meta-Llama-3.1-70B-Instruct",
+    "Uri": "https://ews-emea.api.bosch.com/knowledge/insight-and-analytics/llms/d/v1/chat/completions"
 }
